# mini-mind

./: .gitignore  LICENSE  README.md
.claude/commands/mindmap/: task-1.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-15.md  task-16.md  task-17.md  task-18.md  task-19.md  task-2.md  task-20.md  task-21.md  task-22.md  task-23.md  task-24.md  task-25.md  task-26.md  task-27.md  task-28.md  task-29.md  task-3.md  task-30.md  task-31.md  task-32.md  task-33.md  task-34.md  task-35.md  task-36.md  task-37.md  task-38.md  task-39.md  task-4.md  task-40.md  task-41.md  task-42.md  task-43.md  task-44.md  task-45.md  (+9 more)
.claude/specs/mindmap/: design.md  requirements.md  tasks.md
flutter_app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
flutter_app/integration_test/: app_test.dart  mindmap_workflow_test.dart
flutter_app/lib/: app.dart  main.dart
flutter_app/test/: canvas_test.dart  node_widget_test.dart  widget_test.dart
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_core/src/ffi/: bridge.rs  dto.rs  errors.rs  file_ops.rs  layout_ops.rs  mod.rs  node_ops.rs  search_ops.rs
rust_core/src/graph/: graph.rs  mod.rs  operations.rs  traversal.rs
rust_core/src/io/: markdown.rs  mod.rs  opml.rs
rust_core/src/layout/: force.rs  mod.rs  radial.rs  tree.rs
rust_core/src/metrics/: aggregator.rs  counter.rs  memory.rs  mod.rs  performance.rs  reporter.rs  timer.rs
rust_core/src/models/: document.rs  edge.rs  mod.rs  node.rs
rust_core/src/persistence/: database.rs  database_simple.rs  manager.rs  migrations.rs  mod.rs  queries.rs
rust_core/src/search/: engine.rs  fuzzy.rs  index.rs  mod.rs
rust_core/src/types/: ids.rs  mod.rs  position.rs
rust_core/tests/: graph_tests.rs  layout_tests.rs  persistence_tests.rs
(+54 files in other folders)
