[package]
name = "mindmap_core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform mindmap application core engine"
authors = ["Mini Mind Team"]
license = "MIT"
repository = "https://github.com/yhsung/mini-mind"
keywords = ["mindmap", "graph", "visualization", "cross-platform"]
categories = ["data-structures", "visualization", "gui"]

[lib]
name = "mindmap_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid", "backup"], optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# FFI bridge
flutter_rust_bridge = { version = "2.0", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.0"

# Platform-specific configurations
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"

# Build configuration
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Benchmarks will be added later

# Features for optional functionality
[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
flutter_rust_bridge_feature = ["flutter_rust_bridge"]
metrics = []
debug-ui = []